homless-analysis spacing fixes

--- a/assets/_scss/_homeless-analysis.scss
+++ b/assets/_scss/_homeless-analysis.scss
@@ -517,9 +517,8 @@
     margin-top: 5px;
     overflow: visible;
     background-color: inherit;
-    max-width: 450px;
+    max-width: 460px;
     min-height: 255px;
-    margin-left: 10px;
     float:left;
   }
 
